<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_comfort_zone"
            android:icon="@drawable/ic_terrain_black"
            android:title="@string/comfort_zone_title" />
    </group>

    <item android:title="@string/nav_settings_title">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/preferences" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_face_black"
                android:title="@string/info" />
        </menu>
    </item>

</menu>
