<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:visibility="visible"
    tools:context=".gethernumber.CuteActivity"
    tools:showIn="@layout/activity_cute">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center_horizontal"
            android:text="@string/youre_cute"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textStyle="bold|italic"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/heartImageView"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_heart" />

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/heartImageView"
            android:layout_marginTop="75dp"
            android:layout_centerHorizontal="true"
            android:text="@string/so_how_s_this_guy_doing_so_far"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/chanceTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/questionTextView"
            android:layout_alignStart="@+id/questionTextView"
            android:layout_alignEnd="@+id/questionTextView"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_roundedcorners_white"
            android:padding="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/maybe_i_ll_give_him_a_chance"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/noChanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chanceTextView"
            android:layout_alignStart="@+id/questionTextView"
            android:layout_alignEnd="@+id/questionTextView"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_roundedcorners_white"
            android:padding="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/this_conversation_is_over"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:visibility="invisible" />

    </RelativeLayout>

</RelativeLayout>
