<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/closingRootRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="androidtitancom.cuteapp.ClosingActivity"
    tools:showIn="@layout/activity_closing">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/fab"
        android:padding="@dimen/doubleDefault">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/numberTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/numberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:gravity="center"
                android:hint="@string/number"
                android:inputType="number"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_heart"
        app:backgroundTint="@android:color/white"
        android:transitionName="@string/fab_activity_transition"/>

    <FrameLayout
        android:id="@+id/centeringFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/fab">

        <TextView
            android:id="@+id/sendTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="@dimen/default_fab"
            android:paddingEnd="@dimen/default_fab"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:text="@string/send"
            android:textColor="@color/colorAccent"
            android:background="@drawable/bg_roundedcorners_accent"/>

    </FrameLayout>

    <ImageView
        android:id="@+id/selectionImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/defaultt"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/returnImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/defaultt"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_settings_backup_restore_black_24dp" />

</RelativeLayout>
